
INCLUDES = -I../sysctr

noinst_PROGRAMS = sysctr_test sysctr_null sysctr_exlogger

sysctr_test_SOURCES = sysctr_test.c
sysctr_test_LDADD = ../sysctr/libsysctr.a

sysctr_null_SOURCES = sysctr_null.c
sysctr_null_LDADD = ../sysctr/libsysctr.a

sysctr_exlogger_SOURCES = sysctr_exlogger.c
sysctr_exlogger_LDADD = ../sysctr/libsysctr.a

